# JediNotebook

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  build-android.sh  build-linux.sh  build-macos.sh  docker-compose.yml  setup-android-build-tools.sh
.github/workflows/: release.yml
.planning/: PROJECT.md  config.json
.planning/research/: COMPONENT_CATALOG.md  DATA_FLOWS.md  DEPENDENCIES_AND_PITFALLS.md  FEATURE_INTERACTIONS.md  SUMMARY.md
.serena/: project.yml
client/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/icons/: icon.icns
client/src-tauri/src/: lib.rs  main.rs
client/src/db/: index.ts  migrations.test.ts  migrations.ts  repository.ts  rollover.test.ts  rollover.ts  seed.ts  taskOps.test.ts  taskOps.ts
client/src/hooks/: useActivities.ts  useAllProjectTasks.ts  useAnalytics.ts  useBackspaceGuard.ts  useDayBoundary.ts  useEntity.ts  useFolders.ts  useHabits.ts  useInbox.ts  useMindMaps.ts  useNotes.ts  usePdfDocuments.ts  usePointsCounter.ts  usePomodoro.ts  usePomodoroPresets.ts  useProjectTasks.ts  useProjects.ts  useTimer.ts  (+9 more)
docs/: README.md  android-build-and-install.md  appearance-tracking-and-typography.md  linux-build-and-install.md  typography.md  vault-conflict-resolution.md  vault-sync.md
server/: package-lock.json  package.json  tsconfig.json
server/src/: database.ts  index.ts
shared/: constants.ts  types.ts
(+177 files in other folders)
