[package]
name = "web-timer"
version = "0.3.0"
edition = "2021"

[lib]
name = "web_timer_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true
# Keep our code unoptimized for fast recompiles
opt-level = 0

[profile.dev.package."*"]
# Optimize all dependencies for faster app startup
opt-level = 2
